# GUISpector

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.agent  Dockerfile.celery  README.md  docker-compose.yml  firefox-multi
evaluation/apps/: 00_Prompts_App_Generation.txt  01_park-and-pay.html  02_budget-tracker.html  03_recipe-generator.html  03_recipe-generator_requirements.json  04_fitness-challenges.html
evaluation/goldstandard/: 01_park-and-pay.json  02_budget-tracker.json  (+3 more)
gui_spector/: .gitignore  pyproject.toml
gui_spector/resources/prompts/: PROMPT_APP_EXTRACT_V1.txt  PROMPT_REQUIREMENTS_EXTRACT_V1.txt  PROMPT_TAGS_EXTRACT_V1.txt  PROMPT_V1.txt
gui_spector/src/gui_spector/computers/: base_playwright.py  browserbase.py  config.py  docker.py  local_playwright.py
gui_spector/src/gui_spector/evaluation/: evaluation_run_app.py
gui_spector/src/gui_spector/exceptions/: __init__.py  acceptance_criteria_mismatch.py  maximum_reasoning_steps.py
gui_spector/src/gui_spector/llm/: config.py  llm.py
gui_spector/src/gui_spector/main/: main.py  processor_main.py  runner_main.py  runner_main_test.py
gui_spector/src/gui_spector/models/: __init__.py  acceptance_criterion.py  computer_action.py  inputs.py  interaction.py  requirements.py  usage.py  verfication_run_result.py
gui_spector/src/gui_spector/processor/: app_extractor.py  requirements_processor.py
gui_spector/src/gui_spector/verfication/: agent.py  config.py
mcp/: cursor_mcp_config.json  prompt.txt  touch_save.py  web_mcp_server.py
notebooks/: evaluation.ipynb
webapp/: entrypoint.sh
(+78 files in other folders)
